[tool.poetry]
name = "lintastic"
version = "0.1.0"
description = "CLI to validate YAML and JSON documents"
authors = ["Renan Morais <renan.ps.morais@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.taskipy.tasks]
config = 'poetry config virtualenvs.in-project true --local && poetry run prod'
prod = 'poetry install --no-interaction --without dev && poetry shell'
install = 'poetry install --no-interaction && poetry shell'
format = 'poetry run ruff format lintastic'
lint = 'poetry run ruff check lintastic --fix'
dev = 'task install && task format && task lint'
test = 'pytest -v --cov ./lintastic --cov-fail-under 90 --cov-report html'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E722']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
pyyaml = "^6.0.2"
jsonschema = "^4.23.0"
jsonpath-ng = "^1.6.1"
pydantic = "^2.9.0"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
pytest-mock = "^3.14.0"
ruff = "^0.6.4"
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oas = "lintastic.main:cli"
